# LibrovaInpxWeb

./: .clang-tidy  .dockerignore  .editorconfig  .env.deploy.example  .env.example  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  ruff.toml  vcpkg.json
docs/: CodeStyleGuidelines.md  CodebaseMap.md  InpxWebReader-Product.md  ServerWebDeployment.md  WebUiDesignSystem.md
libs/App/: BookDownloadFacade.cpp  BookDownloadFacade.hpp  CInpxCatalogApplication.cpp  CInpxCatalogApplication.hpp  CMakeLists.txt  FileReplacement.cpp  FileReplacement.hpp  IInpxCatalogApplication.hpp  InpxArchiveAccess.cpp  InpxArchiveAccess.hpp  InpxCacheBootstrap.cpp  InpxCacheBootstrap.hpp  InpxCatalogFacade.cpp  InpxCatalogFacade.hpp  InpxScanJobService.cpp  InpxScanJobService.hpp
libs/Converter/: BuiltInConverterCliProbe.Linux.cpp  BuiltInConverterCliProbe.hpp  BuiltInConverterCliValidation.cpp  BuiltInConverterCliValidation.hpp  CMakeLists.txt  ConverterCommandBuilder.cpp  ConverterCommandBuilder.hpp  ConverterConfiguration.cpp  ConverterConfiguration.hpp  ExternalBookConverter.cpp  ExternalBookConverter.hpp  ExternalBookConverterFileMove.Linux.cpp  ExternalBookConverterFileMove.hpp  ExternalConverterProcessRunner.hpp  LinuxExternalConverterProcessRunner.cpp  LinuxExternalConverterProcessRunner.hpp  LinuxProcessUtils.cpp  LinuxProcessUtils.hpp
libs/Database/: CMakeLists.txt  CatalogStatisticsMaintenance.cpp  CatalogStatisticsMaintenance.hpp  DatabaseSchema.cpp  DatabaseSchema.hpp  SchemaInitializer.cpp  SchemaInitializer.hpp  SearchIndexMaintenance.cpp  SearchIndexMaintenance.hpp  SqliteBookQueryRepository.cpp  SqliteBookQueryRepository.hpp  SqliteConnection.cpp  SqliteConnection.hpp  SqliteEntityHelpers.cpp  SqliteEntityHelpers.hpp  SqliteGenreHelpers.cpp  SqliteGenreHelpers.hpp  SqliteStatement.cpp  SqliteStatement.hpp  SqliteTimePoint.cpp  SqliteTimePoint.hpp  SqliteTransaction.hpp
libs/Domain/: Book.hpp  BookFormat.cpp  BookFormat.hpp  BookId.hpp  BookRepository.hpp  CMakeLists.txt  DomainError.cpp  DomainError.hpp  InpxBookAvailability.hpp  LanguageNormalization.cpp  LanguageNormalization.hpp  MetadataNormalization.cpp  MetadataNormalization.hpp  SearchQuery.hpp  ServiceContracts.hpp
libs/Foundation/: BookPayloadLimits.hpp  CMakeLists.txt  FileSystemUtils.cpp  FileSystemUtils.hpp  FilenamePolicy.cpp  FilenamePolicy.hpp  Logging.cpp  Logging.hpp  Sha256Fingerprint.cpp  Sha256Fingerprint.hpp  StringUtils.cpp  StringUtils.hpp  UnicodeConversion.cpp  UnicodeConversion.hpp  Version.cpp  Version.hpp  ZipArchivePaths.cpp  ZipArchivePaths.hpp
libs/Inpx/: CMakeLists.txt  InpxParser.cpp  InpxParser.hpp  InpxRecord.hpp  InpxSourceConfiguration.cpp  InpxSourceConfiguration.hpp
libs/Parsing/: CMakeLists.txt  Fb2GenreMapper.cpp  Fb2GenreMapper.hpp  Fb2Parser.cpp  Fb2Parser.hpp
libs/ScanSupport/: CMakeLists.txt  CoverCacheProcessing.cpp  CoverCacheProcessing.hpp  ScanConcurrency.hpp  ScanPerfScopes.hpp  ScanPerfTracker.cpp  ScanPerfTracker.hpp
libs/Server/: AuthMiddleware.cpp  AuthMiddleware.hpp  BackendExecutor.cpp  BackendExecutor.hpp  BookListCursor.cpp  BookListCursor.hpp  CMakeLists.txt  HttpError.cpp  HttpError.hpp  HttpServer.cpp  HttpServer.hpp  JsonDtoMapper.cpp  JsonDtoMapper.hpp  ServerApplicationHost.cpp  ServerApplicationHost.hpp  ServerCommandLine.cpp  ServerCommandLine.hpp  ServerConfig.cpp  ServerConfig.hpp  ServerScanCoordinator.cpp  ServerScanCoordinator.hpp
libs/Storage/: CMakeLists.txt  InpxArchivePathResolver.cpp  InpxArchivePathResolver.hpp  InpxCacheLayout.cpp  InpxCacheLayout.hpp  PathSafety.cpp  PathSafety.hpp  RuntimeWorkspaceLayout.hpp  StbCoverImageProcessor.cpp  StbCoverImageProcessor.hpp
scripts/: AGENTS.md  BootstrapRemoteLinux.py  GenerateInpxFixtureCatalog.py  PrepareDeployBundle.py  RunCoverage.py  RunFuzzers.py  RunLinuxTests.py  RunRelease.py  RunRemoteLinux.py  RunSanitizers.py  RunScriptTests.py  RunStaticAnalysis.py  RunTests.py  (+6 more)
tests/Fuzz/: CMakeLists.txt  FuzzFb2Parser.cpp  FuzzInpxArchive.cpp
tests/Unit/: CMakeLists.txt  TestBackendExecutor.cpp  TestBookDownloadFacade.cpp  TestBookFormat.cpp  TestBookId.cpp  TestBuiltInConverterCliValidation.cpp  TestConverterCommandBuilder.cpp  TestConverterConfiguration.cpp  TestDatabaseSchema.cpp  TestDomainError.cpp  TestExternalBookConverterBusiness.cpp  TestExternalBookConverterLinux.cpp  TestExternalBookConverterProcessRunner.hpp  TestFb2GenreMapper.cpp  TestFb2ParserDiagnosticsAndEncoding.cpp  TestFb2ParserMetadataAndCovers.cpp  TestFb2ParserRecoveryAndNormalization.cpp  TestFb2ParserSupport.cpp  TestFb2ParserSupport.hpp  TestFileReplacement.cpp  TestFileSystemUtils.cpp  TestFilenamePolicy.cpp  TestFilesystemHelpers.hpp  TestHttpServer.cpp  TestInpxArchiveAccess.cpp  TestInpxBookAvailability.cpp  TestInpxCacheBootstrap.cpp  TestInpxCacheLayout.cpp  TestInpxParser.cpp  TestInpxScanJobServiceCoversAndLogging.cpp  TestInpxScanJobServiceFinalization.cpp  TestInpxScanJobServiceLifecycle.cpp  TestInpxScanJobServiceRescan.cpp  TestInpxScanJobServiceSupport.cpp  TestInpxScanJobServiceSupport.hpp  TestInpxSourceConfiguration.cpp  TestLanguageNormalization.cpp  TestLogging.cpp  TestMetadataNormalization.cpp  TestPathSafety.cpp  (+23 more)
web/inpx-web-reader/: CMakeLists.txt  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/inpx-web-reader/src/: App.tsx  catalogPages.test.ts  catalogPages.ts  catalogState.test.ts  catalogState.ts  format.ts  main.tsx  styles.css
web/inpx-web-reader/src/api/: client.test.ts  client.ts  types.ts
web/inpx-web-reader/src/components/: BookDetailsDrawer.tsx  BookGrid.tsx  CoverImage.tsx  CoverPlaceholder.tsx  DownloadActions.tsx  SearchToolbar.tsx  SettingsDialog.tsx  StartupScanDialog.tsx  ToastRegion.tsx  components.test.tsx
web/inpx-web-reader/src/hooks/: useCursorBookPages.ts  useMediaQuery.ts  useModalA11y.ts  usePersistentState.ts
web/inpx-web-reader/src/test/: mockData.ts  setup.ts
web/inpx-web-reader/tests/: real-server.spec.ts  web-smoke.spec.ts
web/inpx-web-reader/tools/: run-web-ui.mjs
(+24 files in other folders)
